crates/org-edit/tests/snapshots/snapshots__insert_block.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
Text
‸
----
Text
#+begin_src ‸
#+end_src
