crates/org-edit/tests/snapshots/snapshots__insert_item.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
- [ ] one
- [X] two‸
  - sub
- three

----
- [ ] one
- [X] two
- ‸
  - sub
- three
