crates/org-edit/tests/snapshots/snapshots__insert_link.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
See ‸.

----
See [[https://orgmode.org][Org]]‸.
