crates/org-edit/tests/snapshots/snapshots__insert_link_region.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
See ⁁the manual‸.

----
See [[https://orgmode.org][the manual]]‸.
