crates/org-edit/tests/snapshots/snapshots__insert_rule.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
Text‸

----
Text
-----‸
