crates/org-edit/tests/snapshots/snapshots__insert_timestamp.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
Meet ‸.

----
Meet <2026-09-28 Mon 10:00>‸.
