crates/org-edit/tests/snapshots/snapshots__move_item_down.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
- [ ] one
- [X] two‸
  - sub
- three

----
- [ ] one
- three
- [X] two‸
  - sub
