crates/org-edit/tests/snapshots/snapshots__move_item_up.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
- [ ] one
- [X] two‸
  - sub
- three

----
- [X] two‸
  - sub
- [ ] one
- three
