crates/org-edit/tests/snapshots/snapshots__move_subtree_up.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* TODO [#B] Top :work:
** Child ‸b
** Child a
*** Deep
* Other

----
error: Cannot move past superior level or buffer limit
